# attaca

./: .gitignore  Cargo.toml  README.md
attaca-api/: Cargo.toml
attaca-api/src/: lib.rs  repository.rs  utils.rs  workspace.rs
attaca-client/: Cargo.toml
attaca-client/src/: lib.rs  main.rs
attaca-core/: Cargo.toml
attaca-core/src/: arc_slice.rs  hasher.rs  lib.rs  lockmap.rs  object.rs  object_hash.rs  record.rs  split.rs
attaca-core/src/repository/: ceph.rs  empty.rs  fs.rs  mod.rs  ssh.rs
attaca-core/src/tree/: .mod.rs.rustfmt  mod.rs
attaca-core/src/workspace/: index.rs  mod.rs
attaca-leveldb/: Cargo.toml
attaca-leveldb/schema/: branch_set.capnp
attaca-leveldb/src/: lib.rs  store.rs  workspace.rs
attaca-leveldb/tests/: basics.rs
attaca-rados/: Cargo.toml  build.rs
attaca-rados/src/: lib.rs  mapping.rs  memo.rs
attaca-test/: Cargo.toml
attaca-test/src/: lib.rs  store.rs  test.rs
attaca-test/src/store/: battery.rs  mod.rs
proptest-regressions/: canonical.txt
proptest-regressions/object/: decode.txt  mod.txt
src/: arc_slice.rs  b10.rs  batch.rs  canonical.rs  catalog.rs  context.rs  digest.rs  errors.rs  hierarchy.rs  index.rs  lib.rs  local.rs  main.rs  marshal.rs  merge.rs  netstring.rs  path.rs  remote.rs  repository.rs  split.rs  store.rs  trace.rs  workspace.rs
src/context/: empty.rs  local.rs  mod.rs  remote.rs
src/marshal/: backed.rs  data_tree.rs  dir_tree.rs  hasher.rs  marshaller.rs  mod.rs  object.rs  record.rs  tree.rs
src/object/: decode.rs  encode.rs  metadata.rs  mod.rs
src/old/: catalog.rs  context.rs  errors.rs  index.rs  repository.rs  split.rs  trace.rs
src/old/api/: atomic_weak.rs  context.rs  marshal.rs  mod.rs  object.rs  store.rs
src/old/marshal/: marshaller.rs  object.rs  tree.rs
src/old/store/: .mod.rs.rustfmt  empty.rs  local.rs  mod.rs  ssh.rs
src/store/: ceph.rs  empty.rs  local.rs  mod.rs
subito/: Cargo.toml  build.rs
subito/schema/: cache.capnp  config.capnp  digest.capnp  object_ref.capnp  state.capnp
subito/src/: branch.rs  cache.rs  candidate.rs  change_set.rs  checkout.rs  clone.rs  config.rs  db.rs  fetch.rs  fsck.rs  init.rs  lib.rs  log.rs  main.rs  main.yml  open.rs  plumbing.rs  pull.rs  push.rs  quantified.rs  remote.rs  show.rs  state.rs  status.rs  syntax.rs
subito/src/plumbing/: branch.rs  checkout.rs  fetch.rs  mod.rs  push.rs  remote.rs
