[package]
authors = ["Sean Leffler <sean@errno.com>"]
description = "A resilient, distributed version control system based on Git and designed for use with extremely large repositories."
name = "attaca"
version = "0.1.0"

[dependencies]
chrono = "0.4.0"
digest = "0.7.2"
failure = "0.1.1"
futures-await = "0.1.0"
hex = "0.3.1"
im = "9.0.0"
leb128 = "0.2.2"
memchr = "2.0.1"
nom = "3.2.1"
ntriple = "0.1.1"
parking_lot = "0.5.3"
sha3 = "0.7.2"

[dev-dependencies]
proptest = "0.5.0"

[lib]
name = "attaca"
path = "src/lib.rs"

[workspace]
members = [
    "subito",
    "attaca-rados",
    "attaca-leveldb",
    "attaca-test",
]
