[package]
authors = ["Sean Leffler <sean@errno.com>"]
name = "attaca-core"
version = "0.1.0"

[dependencies]
bincode = "0.9.2"
digest = "0.7.2"
digest-writer = "0.2.0"
failure = "0.1.0"
failure_derive = "0.1.0"
futures-await = "0.1.0"
futures-bufio = "0.2.0"
futures-cpupool = "0.1.7"
globset = "0.2.1"
lazy_static = "0.2.11"
libc = "0.2.33"
memmap = "0.6.1"
rad = "0.5.0"
seahash = "3.0.5"
serde = "1.0.21"
serde_derive = "1.0.21"
sha3 = "0.7.2"
toml = "0.4.5"
typenum = "1.9.0"

[dependencies.chrono]
features = ["serde"]
version = "0.4.0"

[dependencies.generic-array]
features = ["serde"]
version = "0.9.0"

[dependencies.owning_ref]
git = "https://github.com/sdleffler/owning-ref-rs"
