[package]
authors = ["Sean Leffler <sean@errno.com>"]
build = "build.rs"
name = "subito"
version = "0.1.0"

[build-dependencies]
capnpc = "0.8.8"

[dependencies]
capnp = "0.8.15"
db-key = "0.0.5"
enum-primitive-derive = "0.1.2"
failure = "0.1.1"
futures-await = "0.1.0"
ignore = "0.4.1"
itertools = "0.7.6"
leb128 = "0.2.2"
leveldb = "0.8.4"
libc = "0.2.36"
nix = "0.10.0"
num-traits = "0.2.0"
sequence_trie = "0.3.5"
smallvec = "0.6.0"

[dependencies.attaca]
path = ".."

[dependencies.attaca-leveldb]
path = "../attaca-leveldb"
