[package]
authors = ["Sean Leffler <sean@errno.com>"]
build = "build.rs"
name = "subito"
version = "0.0.1"

[build-dependencies]
capnpc = "0.8.8"

[dependencies]
capnp = "0.8.15"
db-key = "0.0.5"
derive_builder = "0.5.1"
failure = "0.1.1"
futures-await = "0.1.0"
hex = "0.3.1"
ignore = "0.4.1"
itertools = "0.7.6"
leveldb = "0.8.4"
nix = "0.10.0"
smallvec = "0.6.0"
structopt = "0.2.3"
url = "1.7.0"

[dependencies.attaca]
path = ".."

[dependencies.attaca-leveldb]
path = "../attaca-leveldb"

[dependencies.clap]
features = ["yaml"]
version = "~2.30.0"
